[tool.poetry]
name = "adaptive-bot"
version = "0.1.0"
description = ""
authors = ["lazy-geeek <lazy-geek@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
tensorflow = "^2.18.0"
keras = "^3.6.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
stable-baselines3 = "^2.3.2"
gym = "^0.26.2"
ccxt = "^4.4.26"
python-binance = "^1.0.22"
websocket-client = "^1.8.0"
backtrader = "^1.9.78.123"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
